--- a/style.css
+++ b/style.css
@@ -1,8 +1,422 @@
 body {
 	margin: 0;
 	padding: 0;
+	color: #533738;
+	font-family: 'Montserrat';
 }
 
-header {
+p {
+	padding: 0;
+	margin: 0;
+}
+
+
+/* Оформление ссылок в nav */
+
+a {
+	text-decoration: none;
+	color: #533738;
+}
+
+.nav-item a:hover,
+.phone:hover {
+	text-decoration: underline;
+	color: #533738;
+}
+
+h2 {
+	text-align: center;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 40px;
+	line-height: 50px;
+	text-transform: uppercase;
+}
+
+
+/* Стили header */
+.logo {
+	display: flex;
+	align-items: center;
+}
+
+.header-page {
+	width: 85%;
+	margin: 35px auto 90px;
+}
+
+.header-page,
+nav {
+	display: flex;
+	justify-content: space-between;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.nav-item {
+	margin-right: 25px;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 20px;
+}
+
+.nav-item:last-child {
+	margin-right: 0;
+}
+
+/* Раздел промо */
+
+.promo-text {
+	width: 40%;
+	margin-left: 13%;
+}
+
+h1 {
+	margin-bottom: 25px;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 50px;
+	line-height: 62px;
+}
+
+.promo-text p {
+	padding: 0;
+	margin: 0;
+	margin-bottom: 20px;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 30px;
+}
+
+.promo-text .button {
+	display: block;
+	text-align: center;
+	padding: 25px 65px;
+	margin-bottom: 230px;
+	width: 180px;
+	background-color: #CC8B86;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 24px;
+}
+
+.promo::after {
+	position: absolute;
+	z-index: -1;
+	width: 100%;
+	height: 715px;
+	top: 0;
+	content: "";
 	background-image: url(/img/header_background.jpg);
+}
+
+/* Раздел О компании */
+
+.company .container {
+	display: flex;
+	margin-left: 13%;
+}
+
+.company img {
+	width: 380px;
+	height: 340px;
+	margin-right: 5%;
+	margin-top: 5px;
+}
+
+.company-text {
+	width: 49%;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 30px;
+}
+
+.company-text p {
+	margin: 0;
+	margin-bottom: 10px;
+}
+
+.company-text p:last-child {
+	margin-bottom: 0;
+}
+
+/* Раздел преимущества компании */
+
+.advantages {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 273px;
+	left: 0px;
+	top: 1356px;
+	margin-top: 20px;
+	background: #8D7370;
+}
+
+.advantages ul {
+	display: flex;
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+
+.advantages-items {
+	margin-right: 20%;
+	text-align: center;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 30px;
+	line-height: 37px;
+	text-transform: uppercase;
+	color: #FFFFFF;
+}
+
+.advantages-items:last-child {
+	margin-right: 0;
+}
+
+.advantages-items span {
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 50px;
+	line-height: 62px;
+}
+
+/* Раздел наши работы */
+
+.projects h2 {
+	text-align: left;
+	margin-left: 7%;
+}
+
+.projects .container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	margin-left: 7%;
+}
+
+.project-text {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	width: 450px;
+	background: url(/img/bedroom.jpg) rgba(100, 72, 69, 0.8);
+	background-size: cover;
+}
+
+.project-text h3 {
+	width: 270px;
+	margin-bottom: 10px;
+	padding: 0;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 30px;
+	line-height: 37px;
+	text-align: center;
+	color: #FFFFFF;
+}
+
+.project-text p {
+	width: 370px;
+	margin: 0;
+	padding: 0;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 30px;
+	color: #FFFFFF;
+}
+
+/* img выпадает из контейнеров, пришлось обрезать картинки по высоте!!! */
+.project-items {
+	height: 370px;
+	width: 570px;
+	overflow: hidden;
+}
+
+.project-items:first-child,
+.project-items:last-child {
+	width: 450px;
+}
+
+.project-items img {
+	max-width: 100%;
+	height: auto;
+}
+
+.project-items:nth-child(3) {
+	margin-right: 20px;
+}
+
+.brown-arrow {
+	display: flex;
+	justify-content: center;
+	position: relative;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 20%;
+}
+
+.brown-arrow img {
+	position: absolute;
+	top: 2px;
+	margin-left: 10px;
+}
+
+/* Раздел Команда */
+
+.teams {
+	background-color: #E2C4BA;
+	overflow: auto;
+}
+
+.teams h2 {
+	margin-top: 20px;
+	margin-bottom: 40px;
+}
+
+.teams .container {
+	display: flex;
+	justify-content: center;
+}
+
+.teams figure {
+	width: 320px;
+	margin: 0;
+	margin-right: 30px;
+}
+
+.teams img {
+	margin-bottom: 10px;
+}
+
+.teams figure:last-child {
+	margin-right: 0;
+}
+
+.teams figcaption {
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 30px;
+}
+
+/* Раздел Как мы работаем */
+
+.work {
+	background-color: #E2C4BA;
+	overflow: auto;
+	padding-bottom: 50px;
+}
+
+h2 {
+	margin-top: 30px;
+}
+
+.work ul {
+	display: flex;
+	list-style: none;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 30px;
+	text-align: center;
+}
+
+
+/* Не получилось сделать круг для span!!! */
+.work span {
+	width: 70px;
+	height: 70px;
+	border-radius: 50%;
+	background-color: #8D7370;
+	margin-bottom: 20px;
+
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 30px;
+	line-height: 30px;
+	color: #FFFFFF;
+}
+
+/* Раздел Отзывы */
+
+.reviews .container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 75%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.arrow-botton {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #CC8B86;
+	width: 70px;
+	height: 70px;
+	border-radius: 50%;
+}
+
+.arrow-botton img {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.reviews blockquote {
+	width: 40%;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 30px;
+	margin: 0;
+}
+
+.reviews p {
+	margin-bottom: 20px;
+}
+
+.reviews cite {
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 30px;
+}
+
+.review-foto {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 24px;
+	width: 40%;
+}
+
+.review-foto img {
+	max-width: 100%;
+	height: auto;
 }
