--- a/style.css
+++ b/style.css
@@ -211,14 +211,15 @@ h2 {
 .projects .container {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 20px;
-	justify-content: center;
+	row-gap: 20px;
+	column-gap: 2%;
+	justify-content: flex-start;
 }
 
 .project-item {
 	position: relative;
 	height: 370px;
-	width: 570px;
+	width: 55%;
 }
 
 .project-item::before {
@@ -234,7 +235,7 @@ h2 {
 
 .project-item:first-child,
 .project-item:last-child {
-	width: 450px;
+	width: 43%;
 }
 
 .project-item img {
@@ -367,7 +368,6 @@ h2 {
 	display: flex;
 	width: 85%;
 	margin: 0 auto;
-	padding-top: 40px;
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 400;
@@ -403,6 +403,10 @@ h2 {
 /* Раздел Отзывы */
 .reviews {
 	padding-bottom: 65px;
+}
+
+.reviews h2 {
+	margin-top: 40px;
 }
 
 .reviews .container {
@@ -469,7 +473,6 @@ h2 {
 .form {
 	display: flex;
 	justify-content: center;
-	row-gap: 2%;
 	background-color: #8D7370;
 }
 
@@ -532,6 +535,7 @@ form {
 	width: 310px;
 	height: 75px;
 	background: #CC8B86;
+	border: none;
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 500;
@@ -540,16 +544,15 @@ form {
 	color: #533738;
 }
 
-
-
 .map {
 	width: 40%;
 	height: auto;
 }
 
 .map img {
-	max-width: 100%;
-	height: auto;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 /* Раздел footer */
